# IC-GVINS

./: .gitignore
config/: DEM.txt  air.yaml  airimg.yaml  cft.yaml  default.yaml  kitti.yaml
ic_gvins/: CMakeLists.txt  package.xml
ic_gvins/ROS/: drawer_rviz.cc  fusion_ros.cc  fusion_ros.h
ic_gvins/app/: run_air.cpp  run_airimg.cpp  run_cft.cpp  run_kitti.cc  run_kitti.cpp
ic_gvins/ic_gvins/: DEM.h  backend.cc  backend.h  dataset.cc  dataset.h  drawer.h  drawer_pangolin.cc  drawer_pangolin.h  ic_gvins.cc  ic_gvins2.cc  ic_gvins2.h  purenav.cc  purenav.h  visual_odometry.cc  visual_odometry.h
ic_gvins/ic_gvins/common/: logging.h  timecost.h  types.h
ic_gvins/ic_gvins/factors/: MappointDEMFactor.h  PositionDEMFactor.h  relativepose_factor.h  reprojection_factor.h
ic_gvins/ic_gvins/fileio/: fileloader.cc  filesaver.cc  filesaver.h
ic_gvins/ic_gvins/tracking/: frame.h  map.cc  map.h  mappoint.cc  mappoint.h  tracking.cc  tracking.h
scripts/: eval_airimg.sh  show_mappoint.py
