<!-- <package> -->
<package format="2">
    <name>ic_gvins</name>
    <version>1.0.0</version>
    <description>The IC-GVINS ROS Interface</description>

    <license>GPLv3</license>

    <maintainer email="thl@whu.edu.cn">hailiang</maintainer>
    <author email="thl@whu.edu.cn">hailiang</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
